added one more unit test for basic functionality, hid test element in test runner

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -11,6 +11,7 @@
       }
       .test-element {
         position: absolute;
+        visibility: hidden;
         top: 10px;
         left: 20px;
         width: 100px;
